@@ -1,6 +1,9 @@
 Flukes Release Notes:
 ---------------------
 
+11/30/12:
+- Updated standard Debian image
+
 11/20/12:
 - Added new standard Debian image
 
